syntax = "proto3";
package models;

option go_package = "protocols/location-pkg";

import "location-pkg-models.proto";

service locationService {
    rpc CreateOrUpdateLocation(models.Location) returns(EmptyLocation);
    rpc LocationByUUID(LocationGetReq) returns (models.Location);
    rpc GetAllLocations(EmptyLocation) returns (models.AllLocations);
    rpc DeleteLocation(LocationDeleteReq) returns(EmptyLocation);

}
message LocationGetReq {
    bytes location_uuid = 1;
}

message LocationDeleteReq {
    bytes location_uuid = 1;
}

message EmptyLocation {}

